Refactor: Resolve the issues with JWTUtils setup for different environments